gitops/manifests/seafile/seafile-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-server
  namespace: seafile
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seafile-server
  template:
    metadata:
      labels:
        app: seafile-server
    spec:
      containers:
        - name: seafile-server
          image: ggogel/seafile-server:11.0.13
          ports:
            - containerPort: 8082
            - containerPort: 8001
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
          startupProbe:
            tcpSocket:
              port: 8082
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8082
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1536Mi
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-server
  namespace: seafile
spec:
  selector:
    app: seafile-server
  ports:
    - name: fileserver
      port: 8082
      targetPort: 8082
    - name: rpc
      port: 8001
      targetPort: 8001
